update to j16, latest modlauncher and other things...
Signed-off-by: cpw <cpw+github@weeksfamily.ca>